# Heterogeneous-Multi-Robot-Adaptive-Sampling

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  connect_jackal.sh  connect_pelican.sh  setup.sh  ssh.sh
jackal_ws_backup/src/jackal_gps_nav/: CMakeLists.txt  package.xml
scripts/: test.py  (+2 more)
src/calibration/: CMakeLists.txt  gps_calibration.txt  package.xml
src/calibration/data/: gps_calibration.txt  gps_range.txt  gps_range_combined.txt  gps_range_fcu.txt  gps_range_fix.txt  gps_waypoints.txt  heading_calibration.txt
src/calibration/launch/: gps_calibration.launch  gps_range.launch  gps_recording.launch  heading_calibration.launch
src/calibration/node/: GPS_calibration.cpp  GPS_range.cpp  GPS_recording.cpp  heading_calibration.cpp
src/robot_agent/: CMakeLists.txt  package.xml
src/robot_agent/config/: fake_agent_config (back_up).yaml  fake_agent_config.yaml  four_obstacle.yaml  jackal_config.yaml  pelican_config.yaml  pelican_config.yaml.save  robot_agent_config.yaml
src/robot_agent/launch/: fake_agent.launch  jackal_node.launch  multi_fake_agent.launch  pelican_node.launch  reporter.launch
src/robot_agent/node/: fake_agent_node.cpp  jackal_node.cpp  pelican_node.cpp  report_measurement_node.cpp
src/robot_agent/src/: fake_agent.cpp  hector_agent.cpp  hector_agent_params.cpp  jackal_agent.cpp  pelican_agent.cpp  pelican_agent_params.cpp  robot_agent.cpp
src/robot_agent/srv/: RequestGoal.srv  RequestTemperatureMeasurement.srv
src/sampling-core/: CMakeLists.txt  package.xml
src/sampling-core/config/: centralized_sampling.yaml
src/sampling-core/data/: Fss.txt  Xss.txt
src/sampling-core/launch/: centralized_sampling.launch
src/sampling-core/node/: centralized_sampling_node.cpp  jackal_node.cpp
src/sampling-core/src/: gmm_utils.cpp  gp_utils.cpp  sampling_visualization.cpp  utils.cpp
src/sampling_agent/: CMakeLists.txt  package.xml
src/sampling_agent/config/: fake_agent_config (back_up).yaml  fake_agent_config.yaml  jackal_config.yaml  pelican_config.yaml
src/sampling_agent/launch/: fake_agent.launch  hector_simulation.launch  jackal_node.launch  jackal_simulation.launch  multi_fake_agent.launch  pelican_node.launch  pelican_simulation.launch  reporter.launch
src/sampling_agent/node/: fake_agent_node.cpp  jackal_node.cpp  pelican_node.cpp  report_measurement_node.cpp  sampling_agent_node.cpp
src/sampling_agent/script/: agent_publish.py
src/sampling_agent/src/: fake_agent.cpp  hector_agent.cpp  hector_agent_params.cpp  jackal_agent.cpp  jackal_agent_params.cpp  pelican_agent.cpp  pelican_agent_params.cpp  sampling_agent.cpp  sampling_agent_params.cpp
src/sampling_core/: CMakeLists.txt  package.xml
src/sampling_core/config/: centralized_sampling.yaml  heterogeneous_adaptive_sampling_config.yaml  mixture_gaussian_process_config.yaml  scenario0_hetero.yaml  scenario0_homo.yaml  scenario1.yaml  scenario1_hetero.yaml  scenario1_homo.yaml  scenario2.yaml  scenario2_hetero.yaml  scenario2_homo.yaml  scenario3.yaml  scenario3_hetero.yaml  scenerio1_heterogeneous_adaptive_sampling_config.yaml  scenerio2_hetero.yaml  scenerio3_hetero.yaml
src/sampling_core/data/: Fss.txt  Fss_gps.txt  GPS.txt  GPS_init.txt  Xss_gps.txt  generateData.py  groundtruth_GPS.txt  groundtruth_temperature.txt  gt_temperature.txt  init_GPS.txt  init_temperature.txt  random_GPS.txt  random_temperature.txt  temperature.txt  temperature_init.txt  test_temperature.txt  untitled.py
src/sampling_core/launch/: centralized_sampling.launch  gmm_test.launch  gp_compare.launch  heterogeneous_adaptive_sampling.launch  homogeneous_adaptive_sampling.launch  sampling_model.launch  sampling_simulation.launch  voronoi_test.launch
src/sampling_core/node/: centralized_sampling_node.cpp  gmm_test_node.cpp  heterogeneous_adaptive_sampling_node.cpp  jackal_node.cpp  sampling_simulation_node.cpp  voronoi_test_node.cpp
src/sampling_core/src/: gmm.cpp  gmm_utils.cpp  gpmm.cpp  informative_point_selection.cpp  sampling_core.cpp  sampling_core_params.cpp  sampling_core_performance_evaluation.cpp  sampling_core_simulation.cpp  sampling_visualization.cpp  utils.cpp  voronoi.cpp  voronoi_visualization.cpp
src/sampling_core/srv/: SamplingGoal.srv
src/sampling_gazebo_simulation/: CMakeLists.txt  package.xml
src/sampling_gazebo_simulation/launch/: one_uav_simulation.launch  one_ugv_one_uav_simulation.launch  one_ugv_simulation.launch  sampling_world.launch  spawn_hector.launch  two_ugv_one_uav_simulation.launch  two_ugv_simulation.launch
src/sampling_gazebo_simulation/rviz/: samlping_visualization.rviz
src/sampling_gazebo_simulation/worlds/: scenario0.world  scenario1.world  scenario2.world  scenario3.world
src/sampling_measurement/: CMakeLists.txt  package.xml
src/sampling_measurement/launch/: measurement_simulation_server.launch  simulation_measurement.launch  temperature_server.launch
src/sampling_measurement/node/: temperature_measurement_simulation_node.cpp
src/sampling_measurement/script/: measurement_simulation_server.py  temperature_server.py
src/sampling_modeling/: CMakeLists.txt  package.xml
src/sampling_modeling/launch/: sampling_model.launch  sampling_modeling.launch
src/sampling_modeling/script/: gp.py  gp_util.py  mixtureGP.py  mixture_gp.py  sampling_modeling_node.py
src/sampling_msgs/: CMakeLists.txt  package.xml
src/sampling_msgs/msg/: AgentLocation.msg  Sample.msg  SamplingPerformance.msg  agent_location.msg  measurement.msg  report.msg  temperature_measurement.msg
src/sampling_msgs/srv/: AddSampleToModel.srv  AddTestPositionToModel.srv  MeasurementService.srv  ModelPredict.srv  ReportSampleService.srv  RequestGoal.srv  RequestLocation.srv  RequestMeasurement.srv  SamplingGoal.srv  StopAgent.srv
src/sampling_online_learning/: CMakeLists.txt  package.xml
src/sampling_online_learning/src/: online_learning_handler.cpp
src/sampling_partition/: CMakeLists.txt  package.xml
src/sampling_utils/: CMakeLists.txt  package.xml
src/sampling_visualization/: CMakeLists.txt  package.xml
src/temperature_measurement/: CMakeLists.txt  package.xml
(+377 files in other folders)
