<?xml version="1.0"?>
<package format="2">
  <name>calibration</name>
  <version>0.0.0</version>
  <description>The calibration package</description>
  <maintainer email="yunfeis@andrew.cmu.edu">Yunfei Shi</maintainer>
  <maintainer email="ningwang@andrew.cmu.edu">Ning Wang</maintainer>
  <maintainer email="jianminz@andrew.cmu.edu">Jianmin Zheng</maintainer>
  <maintainer email="yangzha4@andrew.cmu.edu">Yang Zhang</maintainer>

  <license>BSD</license>

  <depend>catkin</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>

</package>
