<?xml version="1.0"?>
<package format="2">
  <name>sampling_core</name>
  <version>0.0.0</version>
  <description>The sampling_core package</description>

  <maintainer email="yangzha4@cmu.andrew.edu">yang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmuswarm_core</depend>
  <depend>cmuswarm_msgs</depend>
  <depend>cmuswarm_swarm</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>

</package>
