<?xml version="1.0"?>
<package format="2">
  <name>sampling_core</name>
  <version>0.0.0</version>
  <description>The sampling_core package</description>

  <maintainer email="yunfeis@andrew.cmu.edu">Yunfei Shi</maintainer>
  <maintainer email="ningwang@andrew.cmu.edu">Ning Wang</maintainer>
  <maintainer email="jianminz@andrew.cmu.edu">Jianmin Zheng</maintainer>
  <maintainer email="yangzha4@andrew.cmu.edu">Yang Zhang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>sampling_measurement</depend>
  <depend>sampling_msgs</depend>
  <depend>roslib</depend>
  <depend>sampling_partition</depend>
  <depend>sampling_online_learning</depend>
  <depend>sampling_visualization</depend>
  <depend>sampling_utils</depend>
  <depend>std_srvs</depend>
  <depend>sampling_agent</depend>
</package>
