<?xml version="1.0"?>
<package format="2">
  <name>sampling_gazebo_simulation</name>
  <version>0.0.0</version>
  <description>The sampling_gazebo_simulation package</description>

  <maintainer email="yangzha4@alumni.cmu.edu">Yang Zhang</maintainer>
  <maintainer email="yunfeis@alumni.cmu.edu">Yunfei Shi</maintainer>
  <maintainer email="ningwang@alumni.cmu.edu">Ning Wang</maintainer>
  <maintainer email="jianminz@alumni.cmu.edu">Jianmin Zheng</maintainer>

  <license>BSD</license>

  <depend>catkin</depend>
  <depend>global_planner</depend>

</package>
