<?xml version="1.0"?>
<package format="2">
  <name>sampling_measurement</name>
  <version>0.0.0</version>
  <description>The sampling_measurement package</description>

  <maintainer email="yangzha4@alumni.cmu.edu">Yang Zhang</maintainer>
  <maintainer email="yunfeis@alumni.cmu.edu">Yunfei Shi</maintainer>
  <maintainer email="ningwang@alumni.cmu.edu">Ning Wang</maintainer>
  <maintainer email="jianminz@alumni.cmu.edu">Jianmin Zheng</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>sampling_msgs</depend>

</package>
