<?xml version="1.0"?>
<package format="2">
  <name>sampling_modeling</name>
  <version>0.0.0</version>
  <description>The sampling_modeling package</description>

  <maintainer email="yangzha4@alumni.cmu.edu">Yang Zhang</maintainer>
  <maintainer email="yunfeis@alumni.cmu.edu">Yunfei Shi</maintainer>
  <maintainer email="ningwang@alumni.cmu.edu">Ning Wang</maintainer>
  <maintainer email="jianminz@alumni.cmu.edu">Jianmin Zheng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>sampling_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

</package>
