<?xml version="1.0"?>
<package format="2">
  <name>sampling_online_learning</name>
  <version>0.0.0</version>
  <description>The sampling_online_learning package</description>

  <maintainer email="yangzha4@alumni.cmu.edu">Yang Zhang</maintainer>
  <maintainer email="yunfeis@alumni.cmu.edu">Yunfei Shi</maintainer>
  <maintainer email="ningwang@alumni.cmu.edu">Ning Wang</maintainer>
  <maintainer email="jianminz@alumni.cmu.edu">Jianmin Zheng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sampling_utils</depend>
  <depend>geometry_msgs</depend>

</package>
