<?xml version="1.0"?>
<package format="2">
  <name>sampling_utils</name>
  <version>0.0.0</version>
  <description>The sampling_utils package</description>

  <maintainer email="yang@todo.todo">yang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
