<?xml version="1.0"?>
<package format="2">
  <name>sampling_visualization</name>
  <version>0.0.0</version>
  <description>The sampling_visualization package</description>

  <maintainer email="yangzha4@alumni.cmu.edu">Yang Zhang</maintainer>
  <maintainer email="yunfeis@alumni.cmu.edu">Yunfei Shi</maintainer>
  <maintainer email="ningwang@alumni.cmu.edu">Ning Wang</maintainer>
  <maintainer email="jianminz@alumni.cmu.edu">Jianmin Zheng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sampling_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sampling_utils</depend>

</package>
